# LitKG

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  requirements.txt
app/app/: .tasks.py.swp  batch_status.py  celery_app.py  graph_query.py  graph_store.py  ingestion.py  llm.py  main.py  normalization.py  parser.py  schemas.py  tasks.py
db/: init.sql
frontend/: Dockerfile  app.py  requirements.txt
src/litkg/: __init__.py  normalization.py  unified_store.py
tests/: test_graph_query.py  test_ingestion.py  test_normalization.py
